# zmrMiniCRT

./: .gitignore  CMakeLists.txt  README.md  entry.c  malloc.c  minicrt.h  printf.c  rtc_stubs.c  stdio.c  string.c  test.c
